feat: 继续优化快速切歌卡顿问题 #49
